strict query params
