# src/schema/openapi.json
@@ -1,213 +1,221 @@
 {
-  "openapi": "3.0.0",
-  "x-origin": [
-    {
-      "url": "http://localhost:3001/swagger.json",
-      "format": "swagger",
-      "version": "2.0",
-      "converter": {
-        "url": "https://github.com/mermade/oas-kit",
-        "version": "7.0.8"
-      }
-    }
-  ],
-  "info": {
-    "title": "rest-api rails",
-    "version": "0.0.1"
-  },
-  "paths": {
-    "/v1/articles": {
-      "get": {
-        "description": "article entityを全て取得",
-        "parameters": [
-          {
-            "name": "order",
-            "in": "query",
-            "description": "asc or desc",
-            "required": false,
-            "schema": {
-              "type": "string",
-              "enum": ["asc", "desc"]
+    "openapi": "3.0.0",
+    "x-origin": [
+        {
+            "url": "http://localhost:3001/swagger.json",
+            "format": "swagger",
+            "version": "2.0",
+            "converter": {
+                "url": "https://github.com/mermade/oas-kit",
+                "version": "7.0.8"
             }
-          },
-          {
-            "name": "order_by",
-            "in": "query",
-            "description": "ソートするカラム",
-            "required": false,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "get article",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/articleEntities"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "articleが存在しない"
-          }
         }
-      },
-      "post": {
-        "description": "articleの追加",
-        "requestBody": {
-          "$ref": "#/components/requestBodies/articleEntity"
-        },
-        "responses": {
-          "200": {
-            "description": "post article",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/articleEntity"
-                }
-              }
-            }
-          }
-        }
-      }
+    ],
+    "info": {
+        "title": "rest-api rails",
+        "version": "0.0.1"
     },
-    "/v1/article/{id}": {
-      "get": {
-        "description": "article(単体)の取得",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "article id",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "get article",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/articleEntity"
+    "paths": {
+        "/v1/articles": {
+            "get": {
+                "description": "article entityを全て取得",
+                "parameters": [
+                    {
+                        "name": "order",
+                        "in": "query",
+                        "description": "asc or desc",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                "asc",
+                                "desc"
+                            ]
+                        }
+                    },
+                    {
+                        "name": "order_by",
+                        "in": "query",
+                        "description": "ソートするカラム",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "enum": [
+                                "id",
+                                "created_at",
+                                "updated_at"
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "get article",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/articleEntities"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "articleが存在しない"
+                    }
                 }
-              }
+            },
+            "post": {
+                "description": "articleの追加",
+                "requestBody": {
+                    "$ref": "#/components/requestBodies/articleEntity"
+                },
+                "responses": {
+                    "200": {
+                        "description": "post article",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/articleEntity"
+                                }
+                            }
+                        }
+                    }
+                }
             }
-          }
-        }
-      },
-      "put": {
-        "description": "articleの更新",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "article id",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "requestBody": {
-          "$ref": "#/components/requestBodies/articleEntity"
         },
-        "responses": {
-          "200": {
-            "description": "put article",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/articleEntity"
+        "/v1/article/{id}": {
+            "get": {
+                "description": "article(単体)の取得",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "article id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "get article",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/articleEntity"
+                                }
+                            }
+                        }
+                    }
                 }
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "description": "articleの削除",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "article id",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "delete article",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/articleEntity"
+            },
+            "put": {
+                "description": "articleの更新",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "article id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "$ref": "#/components/requestBodies/articleEntity"
+                },
+                "responses": {
+                    "200": {
+                        "description": "put article",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/articleEntity"
+                                }
+                            }
+                        }
+                    }
                 }
-              }
+            },
+            "delete": {
+                "description": "articleの削除",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "article id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "delete article",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/articleEntity"
+                                }
+                            }
+                        }
+                    }
+                }
             }
-          }
         }
-      }
-    }
-  },
-  "servers": [
-    {
-      "url": "//localhost:3000/api"
-    }
-  ],
-  "components": {
-    "requestBodies": {
-      "articleEntity": {
-        "content": {
-          "application/json": {
-            "schema": {
-              "$ref": "#/components/schemas/articleEntity"
-            }
-          }
-        },
-        "description": "articleのリクエスト",
-        "required": true
-      }
     },
-    "schemas": {
-      "articleEntity": {
-        "description": "記事",
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32",
-            "description": "記事を一意に判定するid"
-          },
-          "name": {
-            "type": "string",
-            "description": "記事名"
-          },
-          "body": {
-            "type": "string",
-            "description": "記事内容"
-          }
+    "servers": [
+        {
+            "url": "//localhost:3000/api"
         }
-      },
-      "articleEntities": {
-        "description": "記事の配列",
-        "type": "array",
-        "items": {
-          "$ref": "#/components/schemas/articleEntity"
+    ],
+    "components": {
+        "requestBodies": {
+            "articleEntity": {
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/articleEntity"
+                        }
+                    }
+                },
+                "description": "articleのリクエスト",
+                "required": true
+            }
+        },
+        "schemas": {
+            "articleEntity": {
+                "description": "記事",
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "format": "int32",
+                        "description": "記事を一意に判定するid"
+                    },
+                    "name": {
+                        "type": "string",
+                        "description": "記事名"
+                    },
+                    "body": {
+                        "type": "string",
+                        "description": "記事内容"
+                    }
+                }
+            },
+            "articleEntities": {
+                "description": "記事の配列",
+                "type": "array",
+                "items": {
+                    "$ref": "#/components/schemas/articleEntity"
+                }
+            }
         }
-      }
     }
-  }
 }
